# unittest-demo

./: CMakeLists.txt
.github/workflows/: unit-test.yml
src/: CMakeLists.txt  math.cpp
tests/: CMakeLists.txt  test_math.cpp
